added checkWin Function

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="box" data-cell></div>
         <div class="box" data-cell></div>
       </div>
+      <div class="win-msg" win-msg></div>
     </div>
   </body>
   <script src="app.js"></script>
